2014-09-19  Jason Merrill  <jason@redhat.com>

	PR c++/61465
	* call.c (convert_like_real) [ck_identity]: Call mark_rvalue_use
	after pulling out an element from a CONSTRUCTOR.

2014-09-18  Jakub Jelinek  <jakub@redhat.com>

	PR c++/63248
	* semantics.c (finish_omp_clauses): Don't call cp_omp_mappable_type
	on type of type dependent expressions, and don't call it if
	handle_omp_array_sections has kept TREE_LIST because something
	was type dependent.
	* pt.c (tsubst_expr) <case OMP_TARGET, case OMP_TARGET_DATA>:
	Use keep_next_level, begin_omp_structured_block and
	finish_omp_structured_block instead of push_stmt_list and
	pop_stmt_list.

2014-09-10  Jason Merrill  <jason@redhat.com>

	PR c++/63139
	* pt.c (tsubst_pack_expansion): Simplify substitution into T....

2014-09-09  Jason Merrill  <jason@redhat.com>

	PR lto/53808
	PR c++/61659
	* decl2.c (note_comdat_fn): New.
	(set_comdat): New.
	(cp_write_global_declarations): Call set_comdat.
	* method.c (implicitly_declare_fn): Call note_comdat_fn.
	* pt.c (tsubst_decl) [FUNCTION_DECL]: Likewise.
	* decl2.c (mark_needed): Mark clones.
	(import_export_decl): Not here.

	PR c++/61214
	PR c++/62224
	* decl2.c (decl_needed_p): Revert virtual functions change.

2014-09-05  Jason Merrill  <jason@redhat.com>

	PR c++/62659
	* semantics.c (potential_constant_expression_1): Handle un-folded
	pointer to member constants.

2014-08-26  Jason Merrill  <jason@redhat.com>

	PR c++/58624
	* pt.c (tsubst_copy_and_build) [VAR_DECL]: Use TLS wrapper.
	* semantics.c (finish_id_expression): Don't call TLS wrapper in a
	template.

2014-08-25  Jason Merrill  <jason@redhat.com>

	PR c++/62129
	* class.c (outermost_open_class): New.
	* cp-tree.h: Declare it.
	* decl.c (maybe_register_incomplete_var): Use it.
	(complete_vars): Handle any constant variable.
	* expr.c (cplus_expand_constant): Handle CONSTRUCTOR.

2014-08-22  Igor Zamyatin  <igor.zamyatin@intel.com>

	PR other/62008
	* cp-array-notation.c (build_array_notation_ref): Added correct